# shinx

./: README.md  buildspec.yml  main.tf  state.tf  template.yaml  variables.tf
api/: main.tf  variables.tf
api/api_gateway/: main.tf  outputs.tf  variables.tf
api/api_resource/: build.sh  deployment.py  deployment.tf  main.tf  variables.tf
api/functions/rust_function/: Cargo.toml
api/functions/rust_function/src/: main.rs
notifications/: main.tf  outputs.tf  variables.tf
